--- a/src/app/share/menu/menu.component.html
+++ b/src/app/share/menu/menu.component.html
@@ -5,7 +5,13 @@
         <a routerLink="/immeuble">immeuble</a>
       </div>
       <div class="lien">
-        <a routerLink="/transport">transport</a>
+        <a routerLink="/transport/moto">moto</a>
+      </div>
+      <div class="lien">
+        <a routerLink="/transport/velo">velo</a>
+      </div>
+      <div class="lien">
+        <a routerLink="/transport/voiture">voiture</a>
       </div>
     </div>
   </div>
