--- a/src/app/share/transport/transport.component.html
+++ b/src/app/share/transport/transport.component.html
@@ -1,15 +1,13 @@
 <p>transport works!</p>
-<h1>"je suis un transport"</h1>
-<div class="transport">
-    <a routerLink="velo">Velo</a><br>
-    <a routerLink="moto">Moto</a><br>
-    <a routerLink="voiture">Voiture</a><br>
-   
+<h1>"je suis dans le menu transport"</h1>
+ <div class="transport">
+    <a routerLink="velo"> Velo </a><br>
+    <a routerLink="moto"> Moto </a><br>
+    <a routerLink="voiture">Aller vers voiture</a>
+          
 </div>
 
+
+
+
 <router-outlet></router-outlet>
-
-
-
-
-
