--- a/src/app/share/menu/menu.component.html
+++ b/src/app/share/menu/menu.component.html
@@ -1,18 +1,13 @@
 <p>menu works!</p>
+<nav>
 <div class="sidebar">
     <div class="menu">
-      <div class="lien">
-        <a routerLink="/immeuble">immeuble</a>
+          <div class="lien">
+              <a routerLink="/immeuble">immeuble</a>
+          </div>
+          <div class="transport">
+            <a routerLink="transport">transport</a>
+          </div>
       </div>
-      <div class="lien">
-        <a routerLink="/transport/moto">moto</a>
-      </div>
-      <div class="lien">
-        <a routerLink="/transport/velo">velo</a>
-      </div>
-      <div class="lien">
-        <a routerLink="/transport/voiture">voiture</a>
-      </div>
-    </div>
-  </div>
-  
+</div>
+</nav>
